--- a/trunk/src/main/resources/org/marvec/pisnickar/resources/welcome.html
+++ b/trunk/src/main/resources/org/marvec/pisnickar/resources/welcome.html
@@ -11,27 +11,18 @@
      <h1>Dobrý den,</h1>
      <p>Toto je písničkář, jehož rozhraní využívá HTML. Tak snadno můžeme vytvořit vše co potřebujeme pro hezké
      zobrazení textu písní.</p>
-     <p>Seznam úkolů pro dokončení:</p>
+     <h2>Stručný návod</h2>
+     <p>Co jsou to zdroje a jak fungují, kdy se data ukládají na disk, jak se hledá...</p>
+     <h2>Seznam úkolů pro dokončení</h2>
      <ul>
          <li>prohlížení v záložkách - vytvořit univerzální záložku s reakcemi na požadované události
             <ul>
-                <li>url song:ID otevře danou písnčku</li>
                 <li>chord:Akord otevře akord</li>
-                <li>list:query otevře seznam písniček podle daného dotazu</li>
-                <li>před otevřením se projdou stávající záložky a zjistí se, že už není jednou otevřená</li>
             </ul>
          </li>
-         <li>Cobra (HTML engine) - jak je možné podsouvat svoje obrázky (vytahovat přímo z jaru)</li>
-         <li>editace textů, které se automatizovaně transformují do html při vykreslování</li>
-         <li>import textů ze starého písničkáře</li>
-         <li>import textů z akordy.sk</li>
-         <li>import textů z jiné databáze nového písničkáře</li>
          <li>pomalé posouvání textu</li>
-         <li>otevírání více oken zároveň</li>
-         <li>hledání v textech a názvech</li>
          <li>prohlížeč akordů - například odtud <a href="http://www.all-guitar-chords.com/">www.all-guitar-chords.com/</a></li>
-         <li>online registrace a aktualizace přímo v programu</li>
+         <li>online aktualizace přímo v programu</li>
      </ul>
-     Pokračujte prosím <a href="registrace">registrací</a>...
   </body>
 </html>
